--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         <button type="button" class="button">Заказать услугу</button>
       </section>
 
-      <section>
+      <section class="section">
+        <div class="container">
         <!--<h2> Заголовок к целям </h2>-->
         <ul class="feature-list">
           <li>
@@ -81,9 +82,11 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
 
-      <section>
+      <section class="section">
+        <div class="container">
         <h2 class="work-list">Чем мы занимаемся</h2>
 
         <ul>
@@ -105,9 +108,11 @@
             <img src="./images/nomber3.jpg" alt="парень-ресуєт" width="370" />
           </li>
         </ul>
+      </div>
       </section>
 
       <section>
+        <div class="container">
         <h2 class="junior-list">Наша команда</h2>
 
         <ul>
@@ -136,6 +141,7 @@
             <p lang="en" class="profession">UI Designer</p>
           </li>
         </ul>
+      </div>
       </section>
     </main>
 
