--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
       </section>
     
       <ul>
-        <li>
+        <li class="line">
           <img
             src="./images/photo1.jpg"
             alt="Команда"
@@ -57,7 +57,7 @@
           <h2 class="point">Технокряк</h2>
           <p class="article">Веб-сайт</p>
         </li>
-        <li>
+        <li class="line">
           <img
             src="./images/photo2.jpg"
             alt="Баскетболісти"
@@ -65,7 +65,7 @@
           <h2 class="point">Постер New Orlean vs Golden Star</h2>
           <p class="article">Дизайн</p>
         </li>
-        <li>
+        <li class="line">
           <img
             src="./images/photo3.jpg"
             alt="Логотип ресторану"
@@ -73,7 +73,7 @@
           <h2 class="point">Ресторан Seafood</h2>
           <p class="article">Приложение</p>
         </li>
-        <li>
+        <li class="line">
           <img
             src="./images/photo4.jpg"
             alt="Навушники"
@@ -81,7 +81,7 @@
           <h2 class="point">Проект Prime</h2>
           <p class="article">Маркетинг</p>
         </li>
-        <li>
+        <li class="line">
           <img
             src="./images/photo5.jpg"
             alt="Бокси"
@@ -89,7 +89,7 @@
           <h2 class="point">Проект Boxes</h2>
           <p class="article">Приложение</p>
         </li>
-        <li>
+        <li class="line">
           <img
             src="./images/photo6.jpg"
             alt="Монітор"
@@ -97,7 +97,7 @@
           <h2 class="point">Inspiration has no Borders</h2>
           <p class="article">Веб-сайт</p>
         </li>
-        <li>
+        <li class="line">
           <img
             src="./images/photo7.jpg"
             alt="Журнал"
@@ -105,7 +105,7 @@
           <h2 class="point">Издание Limited Edition</h2>
           <p class="article">Дизайн</p>
         </li>
-        <li>
+        <li class="line">
           <img
             src="./images/photo8.jpg"
             alt="Бирка"
@@ -113,7 +113,7 @@
           <h2 class="point">Проект LAB</h2>
           <p class="article">Маркетинг</p>
         </li>
-        <li>
+        <li class="line">
           <img
             src="./images/photo9.jpg"
             alt="Команда"
