--- a/index.html
+++ b/index.html
@@ -13,35 +13,36 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="container main-nav">
         <a href="./index.html" class="logo"> <span>Web</span>Studio </a>
 
         <ul class="site-nav list">
-          <li>
+          <li class="item">
             <a href="" class="link current">Студия </a>
           </li>
-          <li>
+          <li class="item">
             <a href="./portfolio.html" class="link">Портфолио</a>
           </li>
-          <li>
+          <li class="item">
             <a href="" class="link">Контакти</a>
           </li>
         </ul>
-      </nav>
-
+      
+      
       <ul class="auth-nav list">
-        <li>
+        <li class="item">
           <a href="mailto:info@devstudio.com" class="link"
             >info@devstudio.com</a
           >
         </li>
-        <li>
+        <li class="item">
           <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </li>
       </ul>
+    </nav>
     </header>
 
-    <div class="container"></div>
+   
 
     <main>
       <section class="hero">
@@ -53,28 +54,28 @@
         <div class="container">
         <!--<h2> Заголовок к целям </h2>-->
         <ul class="feature-list">
-          <li>
+          <li class="item">
             <h3 class="title">Внимание к деталям</h3>
             <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="title">Пунктуальность</h3>
             <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="title">Планирование</h3>
             <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="title">Современные технологии</h3>
             <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -146,6 +147,7 @@
     </main>
 
     <footer class="footer">
+      <div class="container">
       <a href="./index.html" class="logo-two"> <span>Web</span>Studio </a>
       <address class="address-list">г. Киев, пр-т Леси Украинки, 26</address>
 
@@ -157,6 +159,7 @@
           <a href="tel:+380961111111" class="item"> +38 096 111 11 11 </a>
         </li>
       </ul>
+      </div>
     </footer>
   </body>
 </html>
