--- a/portfolio.html
+++ b/portfolio.html
@@ -11,44 +11,49 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="container main-nav">
         <a href="./index.html" class="logo"> <span>Web</span>Studio </a>
 
         <ul class="site-nav list">
-          <li>
+          <li class="item">
             <a href="./index.html" class="link">Студия </a>
           </li>
-          <li>
+          <li class="item">
             <a href="./portfolio.html" class="link current">Портфолио</a>
           </li>
-          <li>
+          <li class="item">
             <a href="" class="link">Контакти</a>
           </li>
         </ul>
-      </nav>
+     
 
       <ul class="auth-nav list">
-        <li>
+        <li class="item">
           <a href="mailto:info@devstudio.com" class="link"
             >info@devstudio.com</a
           >
         </li>
-        <li>
+        <li class="item">
           <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </li>
       </ul>
+    </nav>
     </header>
     <main>
       <!--<h1> Портфолио </h1>-->
       <section>
+        <div class="container">
         <button type="button" class="button-portfolio">Все</button>
         <button type="button" class="button-portfolio">Веб-сайты</button>
         <button type="button" class="button-portfolio">Приложения</button>
         <button type="button" class="button-portfolio">Дизайн</button>
         <button type="button" class="button-portfolio">Маркетинг</button>
+      </div>
       </section>
     
       <ul>
+        <div class="container">
+          <div class="flex-container">
         <li class="line">
           <img
             src="./images/photo1.jpg"
@@ -121,11 +126,14 @@
           <h2 class="point">Growing Business</h2>
           <p class="article">Приложение</p>
         </li>
+        </div>
+      </div>
       </ul>
 
     </main>
 
     <footer class="footer">
+      <div class="container">
       <a href="./index.html" class="logo-two"> <span>Web</span>Studio </a>
       <address class="address-list">г. Киев, пр-т Леси Украинки, 26</address>
 
@@ -137,6 +145,7 @@
           <a href="tel:+380961111111" class="item"> +38 096 111 11 11 </a>
         </li>
       </ul>
+    </div>
     </footer>
   </body>
 </html>
