--- a/index.html
+++ b/index.html
@@ -91,21 +91,21 @@
         <h2 class="work-list">Чем мы занимаемся</h2>
 
         <ul>
-          <li>
+          <li class="item">
             <img
               src="./images/nomber1.jpg"
               alt="хлопець-пишет-код"
               width="370"
             />
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/nomber2.jpg"
               alt="дивчина-вивчає-телефон"
               width="370"
             />
           </li>
-          <li>
+          <li class="item">
             <img src="./images/nomber3.jpg" alt="парень-ресуєт" width="370" />
           </li>
         </ul>
@@ -117,29 +117,37 @@
         <h2 class="junior-list">Наша команда</h2>
 
         <ul>
-          <li>
+          <li class="team-list">
             <img
               src="./images/junior1.jpg"
               alt="Игорь Демьяненко"
               width="270"
             />
+            <div class="card-name">
             <h3 class="person">Игорь Демьяненко</h3>
             <p lang="en" class="profession">Product Designer</p>
+          </div>
           </li>
-          <li>
+          <li class="team-list">
             <img src="./images/junior2.jpg" alt="Ольга Репина" width="270" />
+            <div class="card-name">
             <h3 class="person">Ольга Репина</h3>
             <p lang="en" class="profession">Frontend Developer</p>
+          </div>
           </li>
-          <li>
+          <li class="team-list">
             <img src="./images/junior3.jpg" alt="Николай Тарасов" width="270" />
+            <div class="card-name">
             <h3 class="person">Николай Тарасов</h3>
             <p lang="en" class="profession">Marketing</p>
+          </div>
           </li>
-          <li>
+          <li class="team-list">
             <img src="./images/junior4.jpg" alt="Михаил Ермаков" width="270" />
+            <div class="card-name">
             <h3 class="person">Михаил Ермаков</h3>
             <p lang="en" class="profession">UI Designer</p>
+          </div>
           </li>
         </ul>
       </div>
